force-app/main/default/objects/Patient_Facility__c/Patient_Facility__c.object-meta.xml
<CustomObject>
    <label>Patient (f)</label>
    <nameField>
        <displayFormat>PF-{0000000}</displayFormat>
        <label>Patient Facility Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patients (f)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>