force-app/main/default/objects/Patient_Facility__c/fields/JunctionJDE_External_ID__c.field-meta.xml
<CustomField>
    <fullName>JunctionJDE_External_ID__c</fullName>
    <description>Concantenation of the two records from JDE to provide an External Key for Upserts</description>
    <externalId>true</externalId>
    <label>JunctionJDE_External_ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>