force-app/main/default/objects/Patient_Facility__c/fields/Patient_Phone__c.field-meta.xml
<CustomField>
    <fullName>Patient_Phone__c</fullName>
    <formula>PatientId__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Phone</label>
    <type>Text</type>
</CustomField>