force-app/main/default/objects/Patient_Facility__c/fields/PatientId__c.field-meta.xml
<CustomField>
    <fullName>PatientId__c</fullName>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Patient_Facilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>